ai fixed